--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     background-color: #999999;
-
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4);
 }
 
 .task-container>div {
@@ -22,7 +22,7 @@ body {
     padding: 1rem;
     border-radius: 5px;
     background-color: #CCCCCC;
-
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4);
 }
 
 .task-form {
@@ -62,6 +62,7 @@ body {
     margin: 1rem;
     padding: 1rem;
     display: flex;
+    flex-direction: column;
     align-items: flex-start;
 }
 
@@ -74,7 +75,6 @@ body {
 
 .button-container {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-self: center;
     align-items: flex-end;
@@ -84,12 +84,12 @@ button {
     display: inline-block;
     padding: 10px 20px;
     color: #fff;
-    border: none;
     margin: 0.1rem;
     border-radius: 4px;
     cursor: pointer;
     text-align: center;
     text-decoration: none;
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4);
 }
 
 .button-container button:hover,
@@ -100,22 +100,26 @@ button {
 
 .button-container button {
     width: 100%;
+
 }
 
 
 #buttonAdd {
     background-color: green;
+    border-color: darkgreen;
 }
 
 
 .complete {
     background-color: blue;
+    border-color: darkblue;
 }
 
 
 
 .delete {
     background-color: red;
+    border-color: darkred;
 }
 
 
